# IdeaSecretary

./: .gitignore  00_START_HERE.md  COMPLETION_REPORT.md  DELIVERY_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MINDMAP_FIX.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_VISUALIZATION.md  README.md  SETUP_INSTRUCTIONS.md  TREE_MINDMAP_GUIDE.md  TROUBLESHOOTING.md  docker-compose.yml  init.sh  package.json  pyproject.toml  requirements.txt  start.sh
Documents/: NEED.md
Documents/Product Document/: MVP_Product_Document.md
Documents/docs/: DEMO_DATA.md  DEVELOPMENT.md  PROJECT_OVERVIEW.md  QUICKSTART.md  TREE_MINDMAP_FEATURES.md
app/: __init__.py  config.py  database.py  main.py  models.py  prompts.py  schemas.py
app/routers/: chat.py  export.py  ideas.py  libraries.py
app/services/: ai_client.py  backup_service.py  export_service.py  idea_service.py  index_service.py  media_service.py
app/static/: index.html
backend/: .env.example  .gitignore  Dockerfile  app.py  config.py  create_test_data.py  models.py  package.json  requirements.txt  run.py  setup.sh  tsconfig.json
backend/app/: __init__.py
backend/routes/: ai.py  auth.py  ideas.py  media.py  search.py  user.py
backend/services/: auth_service.py  backup_service.py  openai_service.py
backend/src/: db.ts  (+1 more)
data/: idea_secretary.db
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
product_document/: API_REFERENCE.md  CHANGELOG.md  DEVELOPMENT_GUIDE.md  REQUIREMENTS_ANALYSIS.md
shared/: package.json
tests/: test_api.py
(+42 files in other folders)
