[project]
name = "idea-secretary"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "openai==1.102.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.43",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
